añadir boton de filtrar

--- a/QPlan/QPlan.Android/QPlan.Android.csproj
+++ b/QPlan/QPlan.Android/QPlan.Android.csproj
@@ -146,5 +146,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\chebron.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icono_filtrar_100px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icono_filtar_50px.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
