--- a/QPlan/QPlan/QPlan.csproj
+++ b/QPlan/QPlan/QPlan.csproj
@@ -75,6 +75,9 @@
     <EmbeddedResource Update="Views\PaginasCuentaPublicar\PaginaNuevoEvento.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PaginasCuentaPublicar\PaginaPrevisualizarEvento.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PaginasFiltrar\PaginaFiltrar.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
