--- a/QPlan/QPlan.Android/QPlan.Android.csproj
+++ b/QPlan/QPlan.Android/QPlan.Android.csproj
@@ -152,5 +152,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icono_filtar_50px.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\logo_QPlan.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
