--- a/QPlan/QPlan.Android/QPlan.Android.csproj
+++ b/QPlan/QPlan.Android/QPlan.Android.csproj
@@ -153,7 +153,13 @@
     <AndroidResource Include="Resources\drawable\icono_filtar_50px.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\logo_QPlan.jpeg" />
+    <AndroidResource Include="Resources\drawable\icono_x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-hdpi\icon_QPlan.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon_QPlan.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
